# Doggo

./:  README.md  .gitignore  .woodpecker.yml  Cargo.toml  LICENSE  README.md  meson.build  page.codeberg.SOrg.DogGTK.Devel.json  page.codeberg.SOrg.DogGTK.json  page.codeberg.sungsphinx.Dog.json  page.codeberg.sungsphinx.DogGTK.json
.forgejo/: ISSUE_TEMPLATE.yml
.forgejo/workflows/: build-nightly.yml
.gitea/: ISSUE_TEMPLATE.yml  PULL_REQUEST_TEMPLATE.yml
.gitea/ISSUE_TEMPLATE/: BUG-REPORT.yml  BUG_REPORT.yml  FEATURE-REQUEST.yml
.github/workflows/: sync-with-codeberg.yml
build-aux/: page.codeberg.SOrg.DogGTK.Devel.json  page.codeberg.SOrg.DogGTK.json
build-aux/flatpak/: app.drey.Doggo.Devel.json  page.codeberg.SOrg.DogGTK.Devel.json  page.codeberg.SOrg.DogGTK.Devel.yml  page.codeberg.SOrg.DogGTK.json
data/: app.desktop.in.in  app.gschema.xml.in  app.metainfo.xml.in.in  dog.gresource.xml.in  doggo.gresource.xml.in  meson.build  page.codeberg.SOrg.DogGTK.appdata.xml.in  page.codeberg.SOrg.DogGTK.desktop.in  page.codeberg.SOrg.DogGTK.desktop.in.in  page.codeberg.SOrg.DogGTK.gschema.xml  page.codeberg.SOrg.DogGTK.metainfo.xml.in  page.codeberg.SOrg.DogGTK.metainfo.xml.in.in  page.codeberg.sungsphinx.Dog.appdata.xml.in  page.codeberg.sungsphinx.Dog.desktop.in  page.codeberg.sungsphinx.Dog.gschema.xml  page.codeberg.sungsphinx.DogGTK.appdata.xml.in  page.codeberg.sungsphinx.DogGTK.desktop.in  page.codeberg.sungsphinx.DogGTK.gschema.xml
data/icons/: meson.build
data/ui/: shortcuts.blp  style.css  window.blp
po/: POTFILES  POTFILES.in  meson.build
src/: application.c  application.h  application.rs  config.rs  debug-info.c  debug-info.h  dog-application.c  dog-application.h  dog-debug-info.c  dog-window.c  dog-window.h  dog-window.ui  dog.gresource.xml  doggtk.gresource.xml  main.c  main.rs  meson.build  style.css  window.blp.bak  window.c  window.h  window.rs  window.ui
